--- a/demo 3/index.html
+++ b/demo 3/index.html
@@ -150,13 +150,13 @@
 				<div class="welcome-hero-txt">
 					<h2>best place to find and explore <br> that all you need </h2>
 					<p>
-						Find Best Place, Restaurant, Hotel, Real State and many more think in just One click 
+						katso paras hotelli sinulle 
 					</p>
 				</div>
 				<div class="welcome-hero-serch-box">
 					<div class="welcome-hero-form">
 						<div class="single-welcome-hero-form">
-							<h3>what?</h3>
+							<h3>mikä?</h3>
 							<form action="index.html">
 								<input type="text" placeholder="Ex: palce, resturent, food, automobile" />
 							</form>
@@ -165,9 +165,9 @@
 							</div>
 						</div>
 						<div class="single-welcome-hero-form">
-							<h3>location</h3>
+							<h3>sijainti</h3>
 							<form action="index.html">
-								<input type="text" placeholder="Ex: london, newyork, rome" />
+								<input type="text" placeholder="Ex: TOKYO, newyork, rome" />
 							</form>
 							<div class="welcome-hero-form-icon">
 								<i class="flaticon-gps-fixed-indicator"></i>
@@ -176,7 +176,7 @@
 					</div>
 					<div class="welcome-hero-serch">
 						<button class="welcome-hero-btn" onclick="window.location.href='#'">
-							 search  <i data-feather="search"></i> 
+							 etsi  <i data-feather="search"></i> 
 						</button>
 					</div>
 				</div>
@@ -196,7 +196,7 @@
 									<i class="flaticon-restaurant"></i>
 								</div>
 								<h2><a href="#">resturent</a></h2>
-								<p>150 listings</p>
+								<p>150listaus</p>
 							</div>
 						</li>
 						<li>
@@ -205,7 +205,7 @@
 									<i class="flaticon-travel"></i>
 								</div>
 								<h2><a href="#">destination</a></h2>
-								<p>214 listings</p>
+								<p>214 listaus</p>
 							</div>
 						</li>
 						<li>
@@ -214,7 +214,7 @@
 									<i class="flaticon-building"></i>
 								</div>
 								<h2><a href="#">hotels</a></h2>
-								<p>185 listings</p>
+								<p>185listaus</p>
 							</div>
 						</li>
 						<li>
@@ -223,7 +223,7 @@
 									<i class="flaticon-pills"></i>
 								</div>
 								<h2><a href="#">healthcaree</a></h2>
-								<p>200 listings</p>
+								<p>200listaus</p>
 							</div>
 						</li>
 						<li>
@@ -232,7 +232,7 @@
 									<i class="flaticon-transport"></i>
 								</div>
 								<h2><a href="#">automotion</a></h2>
-								<p>120 listings</p>
+								<p>120listaus</p>
 							</div>
 						</li>
 					</ul>
@@ -728,7 +728,7 @@
 								</div><!--/.testimonial-img-->
 								<div class="testimonial-person">
 									<h2>Tom Leakar</h2>
-									<h4>london, UK</h4>
+									<h4>TOKYO, JAP</h4>
 									<div class="testimonial-person-star">
 										<i class="fa fa-star"></i>
 										<i class="fa fa-star"></i>
@@ -753,7 +753,7 @@
 								</div><!--/.testimonial-img-->
 								<div class="testimonial-person">
 									<h2>monirul islam</h2>
-									<h4>london, UK</h4>
+									<h4>TOKYO, JAP</h4>
 									<div class="testimonial-person-star">
 										<i class="fa fa-star"></i>
 										<i class="fa fa-star"></i>
@@ -778,7 +778,7 @@
 								</div><!--/.testimonial-img-->
 								<div class="testimonial-person">
 									<h2>Shohrab Hossain</h2>
-									<h4>london, UK</h4>
+									<h4>TOKYO, JAP</h4>
 									<div class="testimonial-person-star">
 										<i class="fa fa-star"></i>
 										<i class="fa fa-star"></i>
@@ -803,7 +803,7 @@
 								</div><!--/.testimonial-img-->
 								<div class="testimonial-person">
 									<h2>Tom Leakar</h2>
-									<h4>london, UK</h4>
+									<h4>TOKYO, JAP</h4>
 									<div class="testimonial-person-star">
 										<i class="fa fa-star"></i>
 										<i class="fa fa-star"></i>
@@ -828,7 +828,7 @@
 								</div><!--/.testimonial-img-->
 								<div class="testimonial-person">
 									<h2>Tom Leakar</h2>
-									<h4>london, UK</h4>
+									<h4>TOKYO, JAP</h4>
 									<div class="testimonial-person-star">
 										<i class="fa fa-star"></i>
 										<i class="fa fa-star"></i>
@@ -853,7 +853,7 @@
 								</div><!--/.testimonial-img-->
 								<div class="testimonial-person">
 									<h2>monirul islam</h2>
-									<h4>london, UK</h4>
+									<h4>TOKYO, JAP</h4>
 									<div class="testimonial-person-star">
 										<i class="fa fa-star"></i>
 										<i class="fa fa-star"></i>
@@ -878,7 +878,7 @@
 								</div><!--/.testimonial-img-->
 								<div class="testimonial-person">
 									<h2>Shohrab Hossain</h2>
-									<h4>london, UK</h4>
+									<h4>TOKYO, JAP</h4>
 									<div class="testimonial-person-star">
 										<i class="fa fa-star"></i>
 										<i class="fa fa-star"></i>
@@ -903,7 +903,7 @@
 								</div><!--/.testimonial-img-->
 								<div class="testimonial-person">
 									<h2>Tom Leakar</h2>
-									<h4>london, UK</h4>
+									<h4>TOKYO, JAP</h4>
 									<div class="testimonial-person-star">
 										<i class="fa fa-star"></i>
 										<i class="fa fa-star"></i>
@@ -935,7 +935,7 @@
 							<div class="statistics-content">
 								<div class="counter">90 </div> <span>K+</span>
 							</div><!--/.statistics-content-->
-							<h3>listings</h3>
+							<h3listaus</h3>
 						</div><!--/.single-ststistics-box-->
 					</div><!--/.col-->
 					<div class="col-md-3 col-sm-6">
