--- a/demo 3/index.html
+++ b/demo 3/index.html
@@ -90,13 +90,13 @@
 					<div class="header-top-right">
 						<ul>
 							<li class="header-top-contact">
-								+1 222 777 6565
+								+112
 							</li>
 							<li class="header-top-contact">
 								<a href="#">sign in</a>
 							</li>
 							<li class="header-top-contact">
-								<a href="#">register</a>
+								<a href="#">reksistöröinti</a>
 							</li>
 						</ul>
 					</div>
@@ -148,7 +148,7 @@
 		<section id="home" class="welcome-hero">
 			<div class="container">
 				<div class="welcome-hero-txt">
-					<h2>best place to find and explore <br> that all you need </h2>
+					<h2>löydä paras kohde itelleni <br> kaikkee löydät täältä </h2>
 					<p>
 						katso paras hotelli sinulle 
 					</p>
@@ -158,7 +158,7 @@
 						<div class="single-welcome-hero-form">
 							<h3>mikä?</h3>
 							<form action="index.html">
-								<input type="text" placeholder="Ex: palce, resturent, food, automobile" />
+								<input type="text" placeholder="Ex: palce, Ravintolat, food, automobile" />
 							</form>
 							<div class="welcome-hero-form-icon">
 								<i class="flaticon-list-with-dots"></i>
@@ -195,7 +195,7 @@
 								<div class="single-list-topics-icon">
 									<i class="flaticon-restaurant"></i>
 								</div>
-								<h2><a href="#">resturent</a></h2>
+								<h2><a href="#">Ravintolat</a></h2>
 								<p>150listaus</p>
 							</div>
 						</li>
@@ -270,7 +270,7 @@
 								<div class="single-how-works-icon">
 									<i class="flaticon-networking"></i>
 								</div>
-								<h2><a href="#">find <span> what you want</span></a></h2>
+								<h2><a href="#">find <span> mitä tarvit</span></a></h2>
 								<p>
 									Lorem ipsum dolor sit amet, consecte adipisicing elit, sed do eiusmod tempor incididunt ut laboremagna aliqua. 
 								</p>
@@ -284,7 +284,7 @@
 								<div class="single-how-works-icon">
 									<i class="flaticon-location-on-road"></i>
 								</div>
-								<h2><a href="#">explore <span> amazing</span> place</a></h2>
+								<h2><a href="#">seikkaila <span> mahtava</span> paikka</a></h2>
 								<p>
 									Lorem ipsum dolor sit amet, consecte adipisicing elit, sed do eiusmod tempor incididunt ut laboremagna aliqua. 
 								</p>
@@ -312,7 +312,7 @@
 						<div class=" col-md-4 col-sm-6">
 							<div class="single-explore-item">
 								<div class="single-explore-img">
-									<img src="assets/images/explore/e1.jpg" alt="explore image">
+									<img src="assets/img/OIP.jpg" alt="explore image">
 									<div class="single-explore-img-info">
 										<button onclick="window.location.href='#'">best rated</button>
 										<div class="single-explore-image-icon-box">
@@ -332,7 +332,7 @@
 									</div>
 								</div>
 								<div class="single-explore-txt bg-theme-1">
-									<h2><a href="#">tommy helfinger bar</a></h2>
+									<h2><a href="#">tokyo</a></h2>
 									<p class="explore-rating-price">
 										<span class="explore-rating">5.0</span>
 										<a href="#"> 10 ratings</a> 
@@ -340,7 +340,7 @@
 											form
 											<span class="explore-price">5$-300$</span>
 										</span>
-										 <a href="#">resturent</a>
+										 <a href="#">Ravintolat</a>
 									</p>
 									<div class="explore-person">
 										<div class="row">
@@ -353,7 +353,7 @@
 											</div>
 											<div class="col-sm-10">
 												<p>
-													Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incid ut labore et dolore magna aliqua.... 
+													tarjoon mahtavat kokemukset tokyosta 
 												</p>
 											</div>
 										</div>
@@ -378,7 +378,7 @@
 						<div class="col-md-4 col-sm-6">
 							<div class="single-explore-item">
 								<div class="single-explore-img">
-									<img src="assets/images/explore/e2.jpg" alt="explore image">
+									<img src="/assets/img/country_image_Japan.jpg" alt="explore image">
 									<div class="single-explore-img-info">
 										<button onclick="window.location.href='#'">featured</button>
 										<div class="single-explore-image-icon-box">
@@ -398,7 +398,7 @@
 									</div>
 								</div>
 								<div class="single-explore-txt bg-theme-2">
-									<h2><a href="#">swim and dine resort</a></h2>
+									<h2><a href="#">haluatko nähä fuji vuoren?</a></h2>
 									<p class="explore-rating-price">
 										<span class="explore-rating">4.5</span>
 										<a href="#"> 8 ratings</a> 
@@ -419,7 +419,7 @@
 											</div>
 											<div class="col-sm-10">
 												<p>
-													Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incid ut labore et dolore magna aliqua.... 
+												     lisää tiedot saat kysymälä.
 												</p>
 											</div>
 										</div>
@@ -444,7 +444,7 @@
 						<div class="col-md-4 col-sm-6">
 							<div class="single-explore-item">
 								<div class="single-explore-img">
-									<img src="assets/images/explore/e3.jpg" alt="explore image">
+									<img src="/assets/img/Japan_Tokyo_Rivers_Bridges_Spring_Flowering_trees_551769_1920x1080.jpg" alt="explore image">
 									<div class="single-explore-img-info">
 										<button onclick="window.location.href='#'">best rated</button>
 										<div class="single-explore-image-icon-box">
@@ -464,7 +464,7 @@
 									</div>
 								</div>
 								<div class="single-explore-txt bg-theme-3">
-									<h2><a href="#">europe tour</a></h2>
+									<h2><a href="#">Japan tour</a></h2>
 									<p class="explore-rating-price">
 										<span class="explore-rating">5.0</span>
 										<a href="#"> 15 ratings</a> 
@@ -485,7 +485,7 @@
 											</div>
 											<div class="col-sm-10">
 												<p>
-													Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incid ut labore et dolore magna aliqua.... 
+													kato enemmän japanin kaupunkeja tästä. 
 												</p>
 											</div>
 										</div>
@@ -510,7 +510,7 @@
 						<div class=" col-md-4 col-sm-6">
 							<div class="single-explore-item">
 								<div class="single-explore-img">
-									<img src="assets/images/explore/e4.jpg" alt="explore image">
+									<img src="/assets/img/Osaka.jpg" alt="explore image">
 									<div class="single-explore-img-info">
 										<button onclick="window.location.href='#'">most view</button>
 										<div class="single-explore-image-icon-box">
@@ -530,7 +530,7 @@
 									</div>
 								</div>
 								<div class="single-explore-txt bg-theme-4">
-									<h2><a href="#">banglow with swiming pool</a></h2>
+									<h2><a href="#">Tokyon yö valot</a></h2>
 									<p class="explore-rating-price">
 										<span class="explore-rating">5.0</span>
 										<a href="#"> 10 ratings</a> 
@@ -551,7 +551,7 @@
 											</div>
 											<div class="col-sm-10">
 												<p>
-													Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incid ut labore et dolore magna aliqua.... 
+													jos haluut nähä öiset japanin maisemat.
 												</p>
 											</div>
 										</div>
@@ -576,7 +576,7 @@
 						<div class="col-md-4 col-sm-6">
 							<div class="single-explore-item">
 								<div class="single-explore-img">
-									<img src="assets/images/explore/e5.jpg" alt="explore image">
+									<img src="/assets/img/OIP (1).jpg" alt="explore image">
 									<div class="single-explore-img-info">
 										<button onclick="window.location.href='#'">featured</button>
 										<div class="single-explore-image-icon-box">
@@ -596,7 +596,7 @@
 									</div>
 								</div>
 								<div class="single-explore-txt bg-theme-2">
-									<h2><a href="#">vintage car expo</a></h2>
+									<h2><a href="#">JDM Auto</a></h2>
 									<p class="explore-rating-price">
 										<span class="explore-rating">4.2</span>
 										<a href="#"> 8 ratings</a> 
@@ -617,7 +617,7 @@
 											</div>
 											<div class="col-sm-10">
 												<p>
-													Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incid ut labore et dolore magna aliqua.... 
+													täältä saat mahtavan japanilaisen JDM auton.
 												</p>
 											</div>
 										</div>
@@ -642,7 +642,7 @@
 						<div class="col-md-4 col-sm-6">
 							<div class="single-explore-item">
 								<div class="single-explore-img">
-									<img src="assets/images/explore/e6.jpg" alt="explore image">
+									<img src="/assets/img/R.jpg" alt="explore image">
 									<div class="single-explore-img-info">
 										<button onclick="window.location.href='#'">best rated</button>
 										<div class="single-explore-image-icon-box">
@@ -662,7 +662,7 @@
 									</div>
 								</div>
 								<div class="single-explore-txt bg-theme-5">
-									<h2><a href="#">thailand tour</a></h2>
+									<h2><a href="#">Japanin luonto </a></h2>
 									<p class="explore-rating-price">
 										<span class="explore-rating">5.0</span>
 										<a href="#"> 15 ratings</a> 
@@ -683,7 +683,7 @@
 											</div>
 											<div class="col-sm-10">
 												<p>
-													Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incid ut labore et dolore magna aliqua.... 
+													tästä saat nähä mahtavaa japanin luontoo.
 												</p>
 											</div>
 										</div>
